--- a/UI/CSS/Panel/css/layout.panels.css
+++ b/UI/CSS/Panel/css/layout.panels.css
@@ -9,7 +9,7 @@ div.content-panel-inner form {
 body.content-panel-style-1 div.content-panel {
 	padding: 0.2em 1.5em;
 	margin-bottom: 2em;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	border-left: 5px solid #EEE;
 	background-color: rgba(255,255,255,1);
 	}
@@ -50,7 +50,7 @@ body.content-panel-style-2 div.content-panel {
 	display: block;
 	padding: 3px;
 	margin-bottom: 20px;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	background: #EEE;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -102,7 +102,7 @@ body.content-panel-style-2 div.content-panel div.content-panel-inner div.buttonb
 body.content-panel-style-3 div.content-panel {
 	display: block;
 	margin-bottom: 20px;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
@@ -181,7 +181,7 @@ body.content-panel-style-4 div.content-panel {
 	border-radius: 4px;
 	box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.25);
 	border: none;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	}
 body.content-panel-style-4 div.content-panel.content-panel-info {
 	background-color: rgba(255,255,255,0.5);
@@ -211,7 +211,7 @@ body.content-panel-style-4 div.content-panel > h3,
 body.content-panel-style-4 div.content-panel > h4 {
 	line-height: 1.5em;
 /*	border-bottom: 1px solid rgba(191,191,191,0.5);*/
-	box-shadow: 0px 0px 4px rgba(127,127,127,0.5);
+	box-shadow: 0px 0px 1px rgba(127,127,127,0.25);
 	}
 body.content-panel-style-4 div.content-panel > div.content-panel-inner div.buttonbar {
 	background-color: rgba(255,255,255,0.33);
@@ -262,7 +262,6 @@ body.content-panel-style-5 div.content-panel div.content-panel-inner div.buttonb
 	margin: 12px -16px -12px -16px;
 	border-top: 1px solid #999;
 	background-color: rgba(0,0,0,0.20);
-	overflow: hidden;
 	border-radius: 0px 0px 4px 4px;
 	}
 
@@ -294,7 +293,7 @@ body.content-panel-style-6 div.content-panel > div.content-panel-inner {
 	margin: 0px;
 	display: block;
 	line-height: 1.4em;
-	overflow: hidden;
+/*	overflow: hidden;*/
 	}
 body.content-panel-style-6 div.content-panel > h3,
 body.content-panel-style-6 div.content-panel > h4 {
@@ -315,7 +314,7 @@ body.content-panel-style-6 div.content-panel div.content-panel-inner div.buttonb
 	margin: 12px -16px -12px -16px;
 	border-top: 0px solid #999;
 	background-color: rgba(0,0,0,0.20);
-	overflow: hidden;
+/*	overflow: hidden;*/
 	border-radius: 0px 0px 4px 4px;
 	}
 
