Add switch and limits for user boards.

--- a/Info/Dashboard/css/module.info.dashboard.css
+++ b/Info/Dashboard/css/module.info.dashboard.css
@@ -1,7 +1,7 @@
 
 #dashboard-board ul.thumbnails div.thumbnail {
 	text-align: left;
-	height: 300px;
+/*	height: 300px;*/
 	}
 
 #dashboard-board .dashboard-panel {}
