--- a/Info/Dashboard/css/module.info.dashboard.css
+++ b/Info/Dashboard/css/module.info.dashboard.css
@@ -13,7 +13,7 @@
 	cursor: move;
 	}
 #dashboard-board .dashboard-panel .dashboard-panel-handle h4 {
-	padding: 0;
+	padding: 1px 0px 1px 2px;
 	margin: 0;
 	font-size: 1.2em;
 	font-weight: lighter;
@@ -22,6 +22,7 @@
 	height: 240px;
 	overflow-x: hidden;
 	overflow-y: auto;
+	padding: 0px 6px 3px 6px;
 	}
 
 #dashboard-board .dashboard-panel .dashboard-panel-handle .handle-icon {
@@ -37,8 +38,9 @@
 	}
 #dashboard-board .sortable-placeholder {
 	background-color: rgba(127, 127, 127, 0.15);
-	height: 280px;
-	width: 30.5%;
+	background-color: rgba(255, 255, 255, 0.5);
+	height: 286px;
+	width: 30.65%;
 	border: 1px dashed rgba(127, 127, 127, 0.25);
 	display: block;
 	}
