--- a/Work/Issues/css/site.work.issue.css
+++ b/Work/Issues/css/site.work.issue.css
@@ -4,6 +4,10 @@
 	}
 #issue-details .issue-content {}
 
+#issue-change-list-facts dl dt {
+	width: 100px;
+	}
+
 
 .issue-progress {
 	padding: 1px 4px;
@@ -23,7 +27,7 @@
 .issue-progress.progress-100 {
 	background-color: #7FFF7F;
 	}
-	
+
 .issue-severity {
 	padding: 1px 4px;
 	}
@@ -44,7 +48,7 @@
 .issue-severity.severity-5 {
 	background-color: #7FFF7F;
 	}
-	
+
 .issue-priority {
 	padding: 1px 4px;
 	}
@@ -104,7 +108,7 @@
 	background-color: #DFFFEF;
 	}
 
-	
+
 .issue-type {
 	padding: 1px 4px;
 	}
@@ -118,13 +122,13 @@
 	background-color: #FFDFFF;
 	}
 
-	
+
 #issue-list a.issue-title {
 	font-weight: bold;
 	}
 
 
-/*  --  ISSUE CHANGE LIST  --  */	
+/*  --  ISSUE CHANGE LIST  --  */
 #issue-change-list-facts {
 	border-right: 1px solid #DFDFDF;
 	}
@@ -149,7 +153,7 @@
 	padding-top: 0;
 	}
 
-	
+
 table.issues tr td {
 /*	text-shadow: 0px 1px 1px rgba(127,127,127,0.5);*/
 	}
