--- a/Work/Missions/css/module.work.missions.css
+++ b/Work/Missions/css/module.work.missions.css
@@ -193,23 +193,23 @@ legend.icon.mission-close {
 
 
 /*  --  DAY TABLES  -- */
-body.controller-work-mission.action-index .work-mission-list {
+body.moduleWorkMissions .work-mission-list {
 /*	overflow: hidden;*/
 	}
 
-body.controller-work-mission.action-index #day-controls #day-controls-btn-group {
+body.moduleWorkMissions #day-controls #day-controls-btn-group {
 	width: 100%;
 	}
-body.controller-work-mission.action-index #day-controls #day-controls-btn-group a.btn {
+body.moduleWorkMissions #day-controls #day-controls-btn-group a.btn {
 	width:16.67%; box-sizing: border-box
 	}
-body.controller-work-mission.action-index #day-controls-btn-group a.btn div.mission-number {
+body.moduleWorkMissions #day-controls-btn-group a.btn div.mission-number {
 	position: absolute;
 	top: 10px;
 	right: 11px;
 	display: block;
 	}
-body.controller-work-mission.action-index #day-controls-btn-group a.btn .dayDate {
+body.moduleWorkMissions #day-controls-btn-group a.btn .dayDate {
 	display: block;
 	margin: 0px;
 	padding: 0px;
@@ -218,7 +218,7 @@ body.controller-work-mission.action-index #day-controls-btn-group a.btn .dayDate
 
 
 	/* @deprecated */
-body.controller-work-mission.action-index #day-controls button.day {
+body.moduleWorkMissions #day-controls button.day {
 	position: relative;
 	min-width: 80px;
 	width: 12%;
@@ -237,7 +237,7 @@ body.controller-work-mission.action-index #day-controls button.day {
 	border: 1px solid #8F8F8F;
 	}
 /* @deprecated */
-body.controller-work-mission.action-index #day-controls button.day.active {
+body.moduleWorkMissions #day-controls button.day.active {
 	border-width: 2px;
 	border-style: solid;
 	border-color: green;
@@ -246,23 +246,23 @@ body.controller-work-mission.action-index #day-controls button.day.active {
 /*	color: #23738F;
 */	}
 /* @deprecated */
-body.controller-work-mission.action-index #day-controls button.day.active div.mission-number {
+body.moduleWorkMissions #day-controls button.day.active div.mission-number {
 	background-color: green;
 	}
 /* @deprecated */
-body.controller-work-mission.action-index #day-controls button.day.important {
+body.moduleWorkMissions #day-controls button.day.important {
 	width: 16%;
 	}
 /* @deprecated */
-body.controller-work-mission.action-index #day-controls button.day.empty {
+body.moduleWorkMissions #day-controls button.day.empty {
 	min-width: 80px !important;
 	background: #EFEFEF;
 	}
 /* @deprecated */
-body.controller-work-mission.action-index #day-controls button.day.important.empty {
+body.moduleWorkMissions #day-controls button.day.important.empty {
 	}
 /* @deprecated */
-body.controller-work-mission.action-index #day-controls button.day .mission-number {
+body.moduleWorkMissions #day-controls button.day .mission-number {
 	position: relative;
 	float: none !important;
 	display: inline !important;
@@ -270,33 +270,33 @@ body.controller-work-mission.action-index #day-controls button.day .mission-numb
 	top: 0px;
 	right: 0px;
 	}
-body.controller-work-mission.action-index #day-controls .progress {
+body.moduleWorkMissions #day-controls .progress {
 	height: 6px;
 	margin: 4px 2px 2px 2px;
 	padding: 0px;
 	}
-body.controller-work-mission.action-index #day-controls li {
+body.moduleWorkMissions #day-controls li {
 	width: 16.666666667%;
 	}
 /* @deprecated */
-body.controller-work-mission.action-index #day-controls li .dayDate {
+body.moduleWorkMissions #day-controls li .dayDate {
 	display: block;
 	margin: 0px;
 	padding: 0px;
 	font-size: 1.6em;
 	}
 
-body.controller-work-mission.action-index #day-controls .navbar .nav li {
+body.moduleWorkMissions #day-controls .navbar .nav li {
 	position: relative;
 	}
 
-body.controller-work-mission.action-index #day-controls .navbar .nav li a {
+body.moduleWorkMissions #day-controls .navbar .nav li a {
 	position: relative;
 	padding-left: 6px;
 	padding-right: 7px;
 	}
 /* @deprecated */
-body.controller-work-mission.action-index #day-controls .navbar .nav li a div.mission-number {
+body.moduleWorkMissions #day-controls .navbar .nav li a div.mission-number {
 	position: absolute;
 	top: 10px;
 	right: 11px;
@@ -304,27 +304,27 @@ body.controller-work-mission.action-index #day-controls .navbar .nav li a div.mi
 	}
 
 
-body.controller-work-mission.action-index #day-lists {
+body.moduleWorkMissions #day-lists {
 	margin-top: 1em;
 	}
 
-/*body.controller-work-mission.action-index #work_mission_tense_1 #day-lists .table-day {
+/*body.moduleWorkMissions #work_mission_tense_1 #day-lists .table-day {
 	display: none;
 	}*/
-body.controller-work-mission.action-index #day-list-large .table-day table,
-body.controller-work-mission.action-index #day-list-small .table-day-small table {
+body.moduleWorkMissions #day-list-large .table-day table,
+body.moduleWorkMissions #day-list-small .table-day-small table {
 	table-layout: fixed;
 	}
-body.controller-work-mission.action-index #day-lists .table-day table tr td.cell-graph div.cell-graph,
-body.controller-work-mission.action-index #day-lists .table-day table tr td.cell-time div.cell-time,
-body.controller-work-mission.action-index #day-lists .table-day table tr td.cell-title {
+body.moduleWorkMissions #day-lists .table-day table tr td.cell-graph div.cell-graph,
+body.moduleWorkMissions #day-lists .table-day table tr td.cell-time div.cell-time,
+body.moduleWorkMissions #day-lists .table-day table tr td.cell-title {
 	position: relative;
 	}
-body.controller-work-mission.action-index .autocut,
-body.controller-work-mission.action-index #day-list-large .table-day table tr td.autocut,
-body.controller-work-mission.action-index #day-list-small .table-day table tr td.autocut,
-body.controller-work-mission.action-index #day-list-large .table-day table tr td.cell-title,
-body.controller-work-mission.action-index #day-list-small .table-day table tr td.cell-title {
+body.moduleWorkMissions .autocut,
+body.moduleWorkMissions #day-list-large .table-day table tr td.autocut,
+body.moduleWorkMissions #day-list-small .table-day table tr td.autocut,
+body.moduleWorkMissions #day-list-large .table-day table tr td.cell-title,
+body.moduleWorkMissions #day-list-small .table-day table tr td.cell-title {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -861,7 +861,7 @@ body.controller-work-mission .tabbable .nav{
 
 
 /*  --  SMALL  --  */
-body.controller-work-mission.action-index #day-lists .table-day table tr td span.badge {
+body.moduleWorkMissions #day-lists .table-day table tr td span.badge {
 	text-align: left;
 /*	top: -3px;
 	right: 0px;
@@ -875,16 +875,16 @@ span.user-label {
 
 
 /*  --  PHONE LISTS  --  */
-body.controller-work-mission.action-index #day-list-small .table-day-small table.mission-row-small tr td {
+body.moduleWorkMissions #day-list-small .table-day-small table.mission-row-small tr td {
 	padding-left: 9px;
 	}
-body.controller-work-mission.action-index #day-list-small .table-day-small table.mission-row-small tr td.cell-title {
+body.moduleWorkMissions #day-list-small .table-day-small table.mission-row-small tr td.cell-title {
 	position: relative;
 	padding-left: 28px;
 	color: rgba(0, 0, 0, 0.5);
 	font-size: 0.9em;
 	}
-body.controller-work-mission.action-index #day-list-small .table-day-small table.mission-row-small tr td.UNKNOWN {
+body.moduleWorkMissions #day-list-small .table-day-small table.mission-row-small tr td.UNKNOWN {
 	position: absolute;
 	right: auto;
 	left: 2px;
@@ -898,7 +898,7 @@ body.controller-work-mission.action-index #day-list-small .table-day-small table
 	overflow: hidden;
 	text-overflow: ellipsis;
 	}
-body.controller-work-mission.action-index #day-list-small .table-day-small table.mission-row-small tr td.UNKNOWN {
+body.moduleWorkMissions #day-list-small .table-day-small table.mission-row-small tr td.UNKNOWN {
 	text-align: left;
 	}
 
@@ -954,14 +954,14 @@ body.controller-work-mission.action-index #day-list-small .table-day-small table
 	}
 
 
-body.moduleWorkMission input.changed,
-body.moduleWorkMission select.changed {
+body.moduleWorkMissions input.changed,
+body.moduleWorkMissions select.changed {
 	background: #FFF7CF;
 	}
-body.moduleWorkMission select.changed option:not([class]) {
+body.moduleWorkMissions select.changed option:not([class]) {
 	background-color: white;
 	}
-body.moduleWorkMission select.changed option:not(:checked) {
+body.moduleWorkMissions select.changed option:not(:checked) {
 	}
 
 
