--- a/UI/Navigation/css/module.ui.navigation.css
+++ b/UI/Navigation/css/module.ui.navigation.css
@@ -10,11 +10,11 @@ body.nav-sidebar #layout-container #layout-nav {
 	top: 0;
 	width: 240px;
 	height: 100%;
-	background-color: #FBFBFB;
+	background-color: rgba(255, 255, 255, 0.9);
 /*	border-right: 2px solid rgba(0,0,0,0.5);*/
-	-webkit-box-shadow: -6px 0px 20px 0px rgba(0,0,0,0.75)
-	-moz-box-shadow: -6px 0px 20px 0px rgba(0,0,0,0.75)
-	box-shadow: -6px 0px 20px 0px rgba(0,0,0,0.75)
+	-webkit-box-shadow: -6px 0px 20px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: -6px 0px 20px 0px rgba(0,0,0,0.75);
+	box-shadow: -6px 0px 20px 0px rgba(0,0,0,0.75);
 	}
 body.nav-sidebar #layout-container #layout-nav .nav.nav-list {
 	height: 100%;
