--- a/UI/Navigation/css/module.ui.navigation.css
+++ b/UI/Navigation/css/module.ui.navigation.css
@@ -76,9 +76,10 @@ body.nav-sidebar #layout-container #layout-field {
 	body.nav-sidebar #layout-container #nav-sidebar-toggle {
 		display: block;
 		position: fixed;
-		top: 0.25em;
+		top: 0;
 		left: -0.5em;
 		padding: 0.5em;
 		font-size: 2em;
+		cursor: pointer;
 	}
 }
