--- a/JS/Ace/css/module.js.ace.css
+++ b/JS/Ace/css/module.js.ace.css
@@ -1,5 +1,6 @@
 .ace_editor {
     margin: 0;
+    box-sizing: border-box;
 	border: 1px solid rgba(127, 127, 127, 0.5);
 	transition: background-color 0.25s ease-out;
 /*	position: relative !important;
