--- a/UI/CSS/Panel/css/layout.panels.css
+++ b/UI/CSS/Panel/css/layout.panels.css
@@ -59,7 +59,7 @@ body.content-panel-style-2 div.content-panel {
 	border: 0;
 	}
 body.content-panel-style-2 div.content-panel > div.content-panel-inner {
-	background: #fafafb;
+	background: rgba(250, 250, 250, 1);
 	border: solid #CACACA;
 	border-width: 1px;
 	padding: 12px 16px;
@@ -96,6 +96,19 @@ body.content-panel-style-2 div.content-panel div.content-panel-inner div.buttonb
 	border-top: 1px solid #CACACA;
 	background-color: #f1f1f1;
 	}
+body.content-panel-style-2 div.content-panel-inner ul.nav.nav-tabs {}
+body.content-panel-style-2 div.content-panel-inner ul.nav.nav-tabs > li > a {
+	background-color: rgba(223, 223, 223, 0.25);
+	}
+body.content-panel-style-2 div.content-panel-inner ul.nav.nav-tabs > li.active > a {
+	background: rgb(255,255,255);
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(250,250,250,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(250,250,250,1) 100%);
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(250,250,250,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fafafa',GradientType=0 );
+	font-weight: bold;
+	border-bottom: 1px solid rgba(250, 250, 250, 1);
+	}
 
 
 /*  --  STYLE 3  --  */
@@ -109,7 +122,7 @@ body.content-panel-style-3 div.content-panel {
 	border: 0;
 	}
 body.content-panel-style-3 div.content-panel > div.content-panel-inner {
-	background: #fafafb;
+	background: rgba(250, 250, 250, 1);
 	border: solid #CACACA;
 	border-width: 1px;
 	padding: 12px 16px;
@@ -153,6 +166,20 @@ body.content-panel-style-3 div.content-panel div.content-panel-inner div.buttonb
 	background-image: linear-gradient(top, #e1e1e1, #f1f1f1);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#e1e1e1', EndColorStr='#f1f1f1');
 	}
+body.content-panel-style-3 div.content-panel-inner ul.nav.nav-tabs {}
+body.content-panel-style-3 div.content-panel-inner ul.nav.nav-tabs > li > a {
+	background-color: rgba(223, 223, 223, 0.25);
+	}
+body.content-panel-style-3 div.content-panel-inner ul.nav.nav-tabs > li.active > a {
+	background: rgb(255,255,255);
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(250,250,250,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(250,250,250,1) 100%);
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(250,250,250,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fafafa',GradientType=0 );
+	font-weight: bold;
+	border-bottom: 1px solid rgba(250, 250, 250, 1);
+	}
+
 /*body.content-panel-style-3 div.content-panel.content-panel-list > div.content-panel-inner  {
 	padding: 0 0;
 	}
