--- a/Manage/Catalog/Bookstore/css/module.manage.catalog.bookstore.css
+++ b/Manage/Catalog/Bookstore/css/module.manage.catalog.bookstore.css
@@ -77,3 +77,20 @@ body.moduleManageCatalogBookstoreCategory #input_search + ul {
 	border-top-right-radius: 0px;
 	border-top-left-radius: 0px;
 	}
+
+body.moduleManageCatalogBookstoreArticle .badge,
+body.moduleManageCatalogBookstoreAuthor .badge,
+body.moduleManageCatalogBookstoreCategory .badge {
+    font-size: 0.8em;
+	position: relative;
+	font-weight: normal;
+    padding: 1px 5px;
+	color: rgba(63, 63, 63, 0.75);
+	border-width: 1px 1px;
+	border-style: solid;
+	border-color: rgba(63, 63, 63, 0.5);
+	border-radius: 5px;
+	background-color: transparent;
+	display: inline-block;
+	top: -1px;
+	}
