--- a/UI/Navigation/css/module.ui.navigation.css
+++ b/UI/Navigation/css/module.ui.navigation.css
@@ -10,7 +10,7 @@ body.nav-sidebar #layout-container #layout-nav {
 	top: 0;
 	width: 240px;
 	height: 100%;
-	background-color: rgba(255, 255, 255, 0.9);
+	background-color: rgba(255, 255, 255, 1);
 /*	border-right: 2px solid rgba(0,0,0,0.5);*/
 	-webkit-box-shadow: -6px 0px 20px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: -6px 0px 20px 0px rgba(0,0,0,0.75);
@@ -29,6 +29,8 @@ body.nav-sidebar #layout-container #layout-nav .nav.nav-list .nav-list-sub-item 
 body.nav-sidebar #layout-container #layout-nav .nav.nav-list .nav-header {
 	font-size: 1em;
 	color: inherited;
+	color: rgba(0,0,0,0.66);
+	border-bottom: 1px solid rgba(127, 127, 127, 0.25);
 	}
 body.nav-sidebar #layout-container #layout-nav div.brand {
 	text-align: left;
