--- a/Manage/My/Mangopay/css/module.manage.my.mangopay.css
+++ b/Manage/My/Mangopay/css/module.manage.my.mangopay.css
@@ -5,13 +5,17 @@
 	text-transform: uppercase;
 	color: rgba(0, 0, 0, 0.5);
 	}
-.panel-mangopay-view div.value,
-div.value {
+div.value,
+.panel-mangopay-view div.value {
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 	margin: 0px 0px 8px 0px;
 	padding: 4px 8px;
 	font-size: 1.2em;
 	line-height: 1.5em;
-	height: auto !important;
+	height: auto;
+	min-height: 35px;
 	border: 1px solid rgba(223, 223, 223, 0.66);
 	box-shadow: none;
 	background-color: rgba(223, 223, 223, 0.15);
@@ -52,4 +56,15 @@ div.card-list-item-large div.card-title {
 div.card-list-item-large i.fa {
 	margin-top: 0.75em;
 	margin-bottom: 0.25em;
+	}
+
+
+
+
+.i.fa.opacity-50 {
+	opacity: 0.5;
+	font-weight: 100;
+	}
+.fa-stack.fa-sm {
+	font-size: 0.5em;
 	}
